hopefully fixed CBD margin-left error on mobile. converted to just left instead of margin-left

--- a/styles/index.css
+++ b/styles/index.css
@@ -541,7 +541,7 @@ a {
     }
     
     .CBD {
-        margin-left: 5px;
+        left: 5px;
     }
     
     .CBD:before {
